Fix refactor bugs, more enum-celled